--- a/styles.css
+++ b/styles.css
@@ -26,27 +26,12 @@ body {
     max-width: 80%;
     height: auto;
     cursor: none;
-    transition: transform 0.3s;
+    transition: transform 0.2s;
     margin-top: 230px; /* Adjust this value as needed */
 }
 
 #main-img.animated {
-    animation: shake 0.5s;
-    transform: perspective(100px) rotateX(10deg) rotateY(10deg);
-}
-
-@keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
+    transform: scale(1.05);
 }
 
 .nav-bar {
