--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,12 @@ body {
     height: auto;
     cursor: none;
     transition: transform 0.2s;
-    margin-top: 230px; /* Adjust this value as needed */
+    margin-top: 230px;
 }
 
-#main-img.animated {
-    transform: scale(1.05);
+#main-img.tapped {
+    transform: scale(1.1);
 }
-
 .nav-bar {
     display: flex;
     justify-content: space-around;
