--- a/styles.css
+++ b/styles.css
@@ -36,18 +36,32 @@ body {
 .nav-bar {
     display: flex;
     justify-content: space-around;
-    width: 100%;
+    width: 90%;
     position: fixed;
-    bottom: 0;
+    bottom: 15px;
     background-color: rgba(30, 30, 47, 0.9);
     padding: 15px 0;
     border-radius: 15px;
+    box-shadow: 0 0 20px #ffcc00;
 }
 
 .nav-item {
     display: flex;
     flex-direction: column;
     align-items: center;
+};
+
+.nav-emoji {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.nav-icon {
+    width: 24px; /* Adjust the size as needed */
+    height: 24px; /* Adjust the size as needed */
+    border-radius: 50%; /* Optional: to make the image circular */
 }
 
 .nav-emoji {
@@ -55,12 +69,21 @@ body {
     margin-bottom: 5px;
 }
 
+.nav-photo {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    margin-bottom: 1px;
+    border-radius: 15px;
+}
+
 .nav-bar button {
     background: none;
     border: none;
     color: #ffcc00;
     font-size: 22px;
-    cursor: pointer;
+    cursor: none;
+    border-radius: 15px;
 }
 
 #popup {
@@ -76,6 +99,7 @@ body {
     display: none;
     max-width: 80%;
     font-size: 20px;
+    box-shadow: 0 0 10px #ffcc00;
 }
 
 .hidden {
