--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,26 @@ body {
 #balance {
     position: absolute;
     top: 20px;
-    font-size: 28px;
+    right: 10px; /* Positioning to the right */
+    font-size: 22px;
     z-index: 10;
     color: #ffcc00;
     background: rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-    border-radius: 15px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #ffcc00;
+}
+
+#username {
+    position: absolute;
+    top: 20px;
+    left: 10px; /* Positioning to the left */
+    font-size: 22px;
+    z-index: 10;
+    color: #ffcc00;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 10px;
     box-shadow: 0 0 10px #ffcc00;
 }
 
@@ -26,13 +40,14 @@ body {
     max-width: 80%;
     height: auto;
     cursor: none;
-    transition: transform 0.155s;
-    margin-top: 230px;
+    transition: transform 0.15s;
+    margin-top: 150px; /* Adjust this value as needed */
 }
 
 #main-img.tapped {
     transform: scale(1.04);
 }
+
 .nav-bar {
     display: flex;
     justify-content: space-around;
@@ -49,24 +64,20 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-};
+}
 
 .nav-emoji {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 5px;
+    font-size: 24px;
 }
 
 .nav-icon {
     width: 24px; /* Adjust the size as needed */
     height: 24px; /* Adjust the size as needed */
     border-radius: 50%; /* Optional: to make the image circular */
-}
-
-.nav-emoji {
-    font-size: 24px;
-    margin-bottom: 5px;
 }
 
 .nav-photo {
