--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: rebeccapurple;
+    background-color: #5701C2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,11 +37,11 @@ body {
 }
 
 #main-img {
-    max-width: 80%;
+    max-width: 60%;
     height: auto;
     cursor: none;
     transition: transform 0.15s;
-    margin-top: 150px; /* Adjust this value as needed */
+    margin-top: 220px; /* Adjust this value as needed */
 }
 
 #main-img.tapped {
