--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 #balance {
     position: absolute;
     top: 20px;
-    right: 10px;
+    right: 10px; /* Positioning to the right */
     font-size: 20px;
     z-index: 10;
     color: #ffcc00;
@@ -26,7 +26,7 @@ body {
 #username {
     position: absolute;
     top: 20px;
-    left: 10px;
+    left: 10px; /* Positioning to the left */
     font-size: 20px;
     z-index: 10;
     color: #ffcc00;
@@ -41,7 +41,7 @@ body {
     height: auto;
     cursor: none;
     transition: transform 0.15s;
-    margin-top: 220px;
+    margin-top: 220px; /* Adjust this value as needed */
 }
 
 #main-img.tapped {
@@ -75,9 +75,9 @@ body {
 }
 
 .nav-icon {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
+    width: 24px; /* Adjust the size as needed */
+    height: 24px; /* Adjust the size as needed */
+    border-radius: 50%; /* Optional: to make the image circular */
 }
 
 .nav-photo {
@@ -115,24 +115,4 @@ body {
 
 .hidden {
     display: none;
-}
-
-#stats-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    color: #ffcc00;
-    text-align: center;
-}
-
-#stats-container h1 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#stats-container p {
-    margin: 10px 0;
-    font-size: 24px;
 }
