--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ marquee{
   background: #712EDF;
   opacity: 75%;
   border-radius: 10px;
-  padding: 5px 25px;
+  font-size: 20px;
+  padding: 10px 20px;
 }
 @keyframes new{
   0%{
